tests/ui/sized/recursive-type-tail.stderr
error[E0275]: overflow evaluating the requirement `<Foo<()> as Pointee>::Metadata == ()`
  --> $DIR/recursive-type-tail.rs:6:18
   |
LL |     type Assoc = Foo<()>;
   |                  ^^^^^^^
   |
   = note: required for `<() as A>::Assoc` to implement `Thin`
   = note: required for `<() as A>::Assoc` to implement `Sized`
note: required by a bound in `A::Assoc`
  --> $DIR/recursive-type-tail.rs:3:11
   |
LL | trait A { type Assoc; }
   |           ^^^^^^^^^^^ required by this bound in `A::Assoc`
help: consider relaxing the implicit `Sized` restriction
   |
LL | trait A { type Assoc: ?Sized; }
   |                     ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
